[Fix]: centering of research section on small screens
- Previously, on small screens the research section stuck to the right
  side of the screen on smaller screens. This commit fixes that.

--- a/css/styles.css
+++ b/css/styles.css
@@ -397,7 +397,7 @@ nav a:hover {
     display: flex; 
     flex-direction: column;
     align-items: center;
-    margin: 0px 22em;
+    margin: 0px auto;
 }
 .project {
     display: grid;
